scss foorer hero features clients about us

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -8,13 +8,16 @@
 }
 
 .logo {
-  color: var(--dark-color);
   font-family: $logo-font;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
   text-decoration: none;
+}
+
+.logo--header {
+  color: var(--dark-color);
 }
 
 .header-nav__logo {
