--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,8 @@
 @import './utils/variables';
 @import './components/base';
 @import './components/header';
+@import './components/footer';
+@import './components/hero';
+@import './components/features';
+@import './components/about-us';
+@import './components/clients';
