--- a/sass/components/_about-us.scss
+++ b/sass/components/_about-us.scss
@@ -5,7 +5,7 @@
   line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
-  color: var(--dark-color);
+  color: $dark-color;
 }
 
 .about-us-list {
@@ -36,5 +36,5 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   background-color: rgba(47, 48, 58, 0.8);
-  color: var(--white-color);
+  color: $white-color;
 }
