--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -6,7 +6,7 @@
   line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
-  color: var(--dark-color);
+  color: $dark-color;
 }
 
 .clients-list {
@@ -25,15 +25,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid var(--icon-color);
+  border: 1px solid $icon-color;
   border-radius: 4px;
-  color: var(--icon-color);
+  color: $icon-color;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
-    color: var(--accent-color);
-    border: 1px solid var(--accent-color);
+    color: $accent-color;
+    border: 1px solid $accent-color;
   }
 }
 
