--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -22,28 +22,33 @@
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: var(--white-color);
+  color: $white-color;
 }
 
-.btn-order {
-  padding: 10px 32px;
-  font-family: 'Roboto';
+%button {
+  font-family: $main-font;
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
-  text-align: center;
   letter-spacing: 0.06em;
-  color: var(--white-color);
-  background: var(--accent-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  cursor: pointer;
   border: 0px;
+  border-radius: 4px;
+}
+
+.btn-order {
+  @extend %button;
+  padding: 10px 32px;
+  text-align: center;
+  cursor: pointer;
+  color: $white-color;
+  background: $accent-color;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
-    background-color: var(--btn-order-bg);
+    background-color: $btn-order-bg;
   }
 }
