--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,5 +4,6 @@
 @import './components/hero';
 @import './components/features';
 @import './components/about-us';
+@import './components/team';
 @import './components/clients';
 @import './components/footer';
