--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,4 +6,5 @@
 @import './components/about-us';
 @import './components/team';
 @import './components/clients';
+@import './components/modal-window';
 @import './components/footer';
