--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,3 +8,4 @@
 @import './components/clients';
 @import './components/modal-window';
 @import './components/footer';
+@import './components/portfolio';
