--- a/css/main.css
+++ b/css/main.css
@@ -950,44 +950,41 @@ a {
       flex-wrap: wrap;
 }
 
-.project-item {
+.project-list__item {
   position: relative;
   -ms-flex-preferred-size: calc((100% - 60px) / 3);
       flex-basis: calc((100% - 60px) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
+}
+.project-list__item:nth-child(3n) {
+  margin-right: 0px;
+}
+.project-list__item:nth-last-child(-n+3) {
+  margin-bottom: 0px;
+}
+
+.project-list__link {
+  display: inline-block;
+  text-decoration: none;
   background-color: #fff;
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.project-item:nth-child(3n) {
-  margin-right: 0px;
-}
-
-.project-item:nth-last-child(-n+3) {
-  margin-bottom: 0px;
-}
-
-.project-link {
-  text-decoration: none;
-}
-
-.project-item:hover,
-.project-item:focus {
+.project-list__link:hover, .project-list__link:focus {
   text-decoration: none;
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.card-overlay {
+.project-list__card-overlay {
   position: relative;
   overflow: hidden;
 }
 
-.overlay-text {
+.project-list__overlay-text {
   position: absolute;
   top: 0;
   margin: 0;
@@ -1008,8 +1005,7 @@ a {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.project-item:hover .overlay-text {
+.project-list__link:hover .project-list__overlay-text {
   opacity: 1;
   -webkit-transform: translateY(0);
           transform: translateY(0);
