--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -39,40 +39,41 @@
   flex-wrap: wrap;
 }
 
-.project-item {
+.project-list__item {
   position: relative;
   flex-basis: calc((100% - 60px) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
+
+  &:nth-child(3n) {
+    margin-right: 0px;
+  }
+
+  &:nth-last-child(-n + 3) {
+    margin-bottom: 0px;
+  }
+}
+
+.project-list__link {
+  display: inline-block;
+  text-decoration: none;
   background-color: $white-color;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    text-decoration: none;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
 
-.project-item:nth-child(3n) {
-  margin-right: 0px;
-}
-
-.project-item:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
-}
-
-.project-link {
-  text-decoration: none;
-}
-
-.project-item:hover,
-.project-item:focus {
-  text-decoration: none;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.card-overlay {
+.project-list__card-overlay {
   position: relative;
   overflow: hidden;
 }
 
-.overlay-text {
+.project-list__overlay-text {
   position: absolute;
   top: 0;
   margin: 0;
@@ -89,11 +90,11 @@
   transform: translateY(100%);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.project-item:hover .overlay-text {
-  opacity: 1;
-  transform: translateY(0);
+  .project-list__link:hover & {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .project-card {
