--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -5,7 +5,7 @@
   padding-top: 200px;
   padding-bottom: 200px;
   background-size: cover;
-  min-width: 1600px;
+  max-width: 1600px;
   height: 600px;
   margin-left: auto;
   margin-right: auto;
