--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -110,15 +110,9 @@
 
     color: rgba(117, 117, 117, 0.5);
   }
-}
 
-.form__icon-position {
-  position: relative;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  &:hover,
-  &:focus {
-    color: $accent-color;
+  &:focus-within .form__icon {
+    fill: $accent-color;
   }
 }
 
@@ -128,25 +122,32 @@
   position: absolute;
   margin: 11px 12px;
   padding: 3px;
-  fill: currentColor;
+  fill: $dark-color;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form__icon--name {
   width: 26px;
   height: 26px;
-  fill: $dark-color;
 }
 
 .form__icon--tel {
   width: 27px;
   height: 27px;
-  fill: $dark-color;
 }
 
 .form__icon--email {
   width: 30px;
   height: 26px;
-  fill: $dark-color;
+}
+
+.form__icon-position {
+  position: relative;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:focus-within .form__icon {
+    fill: $accent-color;
+  }
 }
 
 .form__label {
