--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -111,7 +111,8 @@
     color: rgba(117, 117, 117, 0.5);
   }
 
-  &:focus-within .form__icon {
+  &:hover,
+  &:focus + .form__icon {
     fill: $accent-color;
   }
 }
@@ -143,11 +144,11 @@
 
 .form__icon-position {
   position: relative;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+  /*
   &:focus-within .form__icon {
     fill: $accent-color;
-  }
+  } 
+*/
 }
 
 .form__label {
