--- a/css/main.css
+++ b/css/main.css
@@ -165,7 +165,7 @@ a {
   padding-top: 200px;
   padding-bottom: 200px;
   background-size: cover;
-  min-width: 1600px;
+  max-width: 1600px;
   height: 600px;
   margin-left: auto;
   margin-right: auto;
@@ -613,14 +613,8 @@ a {
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
-.form__icon-position {
-  position: relative;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.form__icon-position:hover, .form__icon-position:focus {
-  color: #2196f3;
+.form__input:hover + .form__icon, .form__input:focus + .form__icon {
+  fill: #2196f3;
 }
 
 .form__icon {
@@ -629,25 +623,28 @@ a {
   position: absolute;
   margin: 11px 12px;
   padding: 3px;
-  fill: currentColor;
+  fill: #212121;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form__icon--name {
   width: 26px;
   height: 26px;
-  fill: #212121;
 }
 
 .form__icon--tel {
   width: 27px;
   height: 27px;
-  fill: #212121;
 }
 
 .form__icon--email {
   width: 30px;
   height: 26px;
-  fill: #212121;
+}
+
+.form__icon-position {
+  position: relative;
 }
 
 .form__label {
